benchmarks/locustio/gen-output/locust.locust.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: myrelease
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: locust
    app.kubernetes.io/version: 2.15.1
    component: master
    helm.sh/chart: locust-0.31.5
    load_test: example
  name: locust
  namespace: locust
spec:
  ports:
  - name: master-p1
    port: 5557
    protocol: TCP
    targetPort: 5557
  - name: master-p2
    port: 5558
    protocol: TCP
    targetPort: 5558
  - name: master-p3
    port: 8089
    protocol: TCP
    targetPort: 8089
  selector:
    app.kubernetes.io/instance: myrelease
    app.kubernetes.io/name: locust
    component: master
    load_test: example
  type: ClusterIP
